title style change

--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
                                                         <div class="firstItem">
                                                             <div class="heading">
                                                                 <input class="htilr" name="head_1" id="head_1" value="PARTY WINGS / " >
-                                                                <input class="htilr" name="head_2" id="head_2" value="BONELESS WINGS" >
+                                                                <input class="htilr" name="head_2" id="head_2" value="BONE-IN / BONELESS" >
                                                             </div>
                                                             <div class="price-box1">
                                                                 <div class="price-box-wapper">
