--- a/index.html
+++ b/index.html
@@ -237,180 +237,259 @@
 														<div class="menu_items">
 															<div class="menu_items_wrapper">
 																<div class="menu_items_single">
-																<input
-																	type="text"
-																	class="product1 fontx textx"
-																	name="text_15"
-																	id="text_15"
-																	value="BUFFALO"
-																/>
-																<input
+																	<div class="menu_item_input_container">
+																		<input
+																		type="text"
+																		class="product1 fontx textx"
+																		name="text_15"
+																		id="text_15"
+																		value="BUFFALO"
+																	/>
+																	<img class="chilli-1" src="./img/CHILLI.png" alt="">
+																	</div>
+																<div class="menu_item_input_container">
+																	<input
 																	type="text"
 																	class="product1 fontx textx"
 																	name="text_16"
 																	id="text_16"
 																	value="MANGO HABANERO"
 																/>
-																<input
-																	type="text"
-																	class="product1 fontx textx"
-																	name="text_16"
-																	id="text_16"
-																	value="HOT BBQ"
-																/>
-																<input
-																	type="text"
-																	class="product1 fontx textx"
-																	name="text_17"
-																	id="text_17"
-																	value="LEMON PEPPER"
-																/>
-																<input
-																	type="text"
-																	class="product1 fontx textx"
-																	name="text_18"
-																	id="text_18"
-																	value="HOT TERIYAKI"
-																/>
-																<input
-																	type="text"
-																	class="product1 fontx textx"
-																	name="text_19"
-																	id="text_19"
-																	value="LEMON TERIYAKI"
-																/>
+																<img class="chilli-1" src="./img/CHILLI.png" alt="">
+																<img class="chilli-2" src="./img/CHILLI.png" alt="">
+																</div>
+																<div class="menu_item_input_container">
+
+																	<input
+																		type="text"
+																		class="product1 fontx textx"
+																		name="text_17"
+																		id="text_17"
+																		value="HOT BBQ"
+																	/>
+																<img class="chilli-1" src="./img/CHILLI.png" alt="">
+																</div>
+																<div class="menu_item_input_container">
+
+																	<input
+																		type="text"
+																		class="product1 fontx textx"
+																		name="text_18"
+																		id="text_18"
+																		value="LEMON PEPPER"
+																	/>
+																</div>
+																<div class="menu_item_input_container">
+
+																	<input
+																		type="text"
+																		class="product1 fontx textx"
+																		name="text_19"
+																		id="text_19"
+																		value="HOT TERIYAKI"
+																	/>
+																	<img class="chilli-1" src="./img/CHILLI.png" alt="">
+																</div>
+
+																<div class="menu_item_input_container">
+
+																	<input
+																		type="text"
+																		class="product1 fontx textx"
+																		name="text_20"
+																		id="text_20"
+																		value="LEMON TERIYAKI"
+																	/>
+																</div>
 																</div>
 																<div class="menu_items_single">
-																<input
-																	type="text"
-																	class="product1 fontx textx"
-																	name="text_20"
-																	id="text_20"
-																	value="HOT OLD BAY"
-																/>
-																<input
-																	type="text"
-																	class="product1 fontx textx"
-																	name="text_21"
-																	id="text_21"
-																	value="HOT CARIBBEAN CITRUS"
-																/>
-																<input
-																	type="text"
-																	class="product1 fontx textx"
-																	name="text_22"
-																	id="text_22"
-																	value="MOON DUST"
-																/>
-																<input
-																	type="text"
-																	class="product1 fontx textx"
-																	name="text_23"
-																	id="text_23"
-																	value="HOT LEMON PEPPER"
-																/>
-																<input
-																	type="text"
-																	class="product1 fontx textx"
-																	name="text_24"
-																	id="text_24"
-																	value="HONEY BBQ"
-																/>
-																<input
-																	type="text"
-																	class="product1 fontx textx"
-																	name="text_25"
-																	id="text_25"
-																	value="HONEY LEMON PEPPER"
-																/>
+																<div class="menu_item_input_container">
+																	<img class="chilli-1" src="./img/CHILLI.png" alt="">
+
+																	<input
+																		type="text"
+																		class="product1 fontx textx"
+																		name="text_20"
+																		id="text_20"
+																		value="HOT OLD BAY"
+																	/>
+																</div>
+																<div class="menu_item_input_container">
+																	<img class="chilli-1" src="./img/CHILLI.png" alt="">
+																	<input
+																		type="text"
+																		class="product1 fontx textx"
+																		name="text_21"
+																		id="text_21"
+																		value="HOT CARIBBEAN CITRUS"
+																	/>
+																</div>
+																<div class="menu_item_input_container">
+
+																	<input
+																		type="text"
+																		class="product1 fontx textx"
+																		name="text_22"
+																		id="text_22"
+																		value="MOON DUST"
+																	/>
+																</div>
+																<div class="menu_item_input_container">
+																	<img class="chilli-1" src="./img/CHILLI.png" alt="">
+																	<input
+																		type="text"
+																		class="product1 fontx textx"
+																		name="text_23"
+																		id="text_23"
+																		value="HOT LEMON PEPPER"
+																	/>
+																</div>
+																<div class="menu_item_input_container">
+
+																	<input
+																		type="text"
+																		class="product1 fontx textx"
+																		name="text_24"
+																		id="text_24"
+																		value="HONEY BBQ"
+																	/>
+																</div>
+																<div class="menu_item_input_container">
+
+																	<input
+																		type="text"
+																		class="product1 fontx textx"
+																		name="text_25"
+																		id="text_25"
+																		value="HONEY LEMON PEPPER"
+																	/>
+																</div>
 																</div>
 																<div class="menu_items_single">
-																<input
-																	type="text"
-																	class="product1 fontx textx"
-																	name="text_26"
-																	id="text_26"
-																	value="MILD"
-																/>
-																<input
-																	type="text"
-																	class="product1 fontx textx"
-																	name="text_27"
-																	id="text_27"
-																	value="HONEY GARLIC PEPPER"
-																/>
-																<input
-																	type="text"
-																	class="product1 fontx textx"
-																	name="text_28"
-																	id="text_28"
-																	value="HOT"
-																/>
-																<input
-																	type="text"
-																	class="product1 fontx textx"
-																	name="text_29"
-																	id="text_29"
-																	value="NUCLEAR"
-																/>
-																<input
-																	type="text"
-																	class="product1 fontx textx"
-																	name="text_30"
-																	id="text_30"
-																	value="CAJUN"
-																/>
-																<input
-																	type="text"
-																	class="product1 fontx textx"
-																	name="text_31"
-																	id="text_31"
-																	value="OLD BAY"
-																/>
+																<div class="menu_item_input_container">
+
+																	<input
+																		type="text"
+																		class="product1 fontx textx"
+																		name="text_26"
+																		id="text_26"
+																		value="MILD"
+																	/>
+																</div>
+																<div class="menu_item_input_container">
+
+																	<input
+																		type="text"
+																		class="product1 fontx textx"
+																		name="text_27"
+																		id="text_27"
+																		value="HONEY GARLIC PEPPER"
+																	/>
+																</div>
+																<div class="menu_item_input_container">
+																	<img class="chilli-1" src="./img/CHILLI.png" alt="">
+																	<input
+																		type="text"
+																		class="product1 fontx textx"
+																		name="text_28"
+																		id="text_28"
+																		value="HOT"
+																	/>
+																</div>
+																<div class="menu_item_input_container">
+																	<img class="chilli-1" src="./img/CHILLI.png" alt="">
+																	<img class="chilli-2" src="./img/CHILLI.png" alt="">
+																	<img class="chilli-3" src="./img/CHILLI.png" alt="">
+																	<input
+																		type="text"
+																		class="product1 fontx textx"
+																		name="text_29"
+																		id="text_29"
+																		value="NUCLEAR"
+																	/>
+																</div>
+																<div class="menu_item_input_container">
+																	<img class="chilli-1" src="./img/CHILLI.png" alt="">
+																	<input
+																		type="text"
+																		class="product1 fontx textx"
+																		name="text_30"
+																		id="text_30"
+																		value="CAJUN"
+																	/>
+																</div>
+																<div class="menu_item_input_container">
+
+																	<input
+																		type="text"
+																		class="product1 fontx textx"
+																		name="text_31"
+																		id="text_31"
+																		value="OLD BAY"
+																	/>
+																</div>
 																</div>
 																<div class="menu_items_single">
-																<input
-																	type="text"
-																	class="product1 fontx textx"
-																	name="text_32"
-																	id="text_32"
-																	value="KANSAS CITY"
-																/>
-																<input
-																	type="text"
-																	class="product1 fontx textx"
-																	name="text_33"
-																	id="text_33"
-																	value="PLAIN"
-																/>
-																<input
-																	type="text"
-																	class="product1 fontx textx"
-																	name="text_34"
-																	id="text_34"
-																	value="HONEY MUSTARD"
-																/>
-																<input
-																	type="text"
-																	class="product1 fontx textx"
-																	name="text_35"
-																	id="text_35"
-																	value="HOT GARLIC PEPPER"
-																/>
-																<input
-																	type="text"
-																	class="product1 fontx textx"
-																	name="text_36"
-																	id="text_36"
-																	value="GARLIC & PARMESAN"
-																/>
-																<input
-																	type="text"
-																	class="product1 fontx textx"
-																	name="text_37"
-																	id="text_37"
-																	value="HONEY OLD BAY"
-																/>
+																<div class="menu_item_input_container">
+
+																	<input
+																		type="text"
+																		class="product1 fontx textx"
+																		name="text_32"
+																		id="text_32"
+																		value="KANSAS CITY"
+																	/>
+																</div>
+																<div class="menu_item_input_container">
+
+																	<input
+																		type="text"
+																		class="product1 fontx textx"
+																		name="text_33"
+																		id="text_33"
+																		value="PLAIN"
+																	/>
+																</div>
+																<div class="menu_item_input_container">
+
+																	<input
+																		type="text"
+																		class="product1 fontx textx"
+																		name="text_34"
+																		id="text_34"
+																		value="HONEY MUSTARD"
+																	/>
+																</div>
+																<div class="menu_item_input_container">
+
+																	<input
+																		type="text"
+																		class="product1 fontx textx"
+																		name="text_35"
+																		id="text_35"
+																		value="HOT GARLIC PEPPER"
+																	/>
+																</div>
+																<div class="menu_item_input_container">
+
+																	<input
+																		type="text"
+																		class="product1 fontx textx"
+																		name="text_36"
+																		id="text_36"
+																		value="GARLIC & PARMESAN"
+																	/>
+																</div>
+																<div class="menu_item_input_container">
+
+																	<input
+																		type="text"
+																		class="product1 fontx textx"
+																		name="text_37"
+																		id="text_37"
+																		value="HONEY OLD BAY"
+																	/>
+																</div>
 																</div>
 																
 																
