--- a/index.html
+++ b/index.html
@@ -461,7 +461,7 @@
 																	/>
 																</div>
 																<div class="menu_item_input_container">
-
+																	<img class="chilli-1" src="./img/CHILLI.png" alt="">
 																	<input
 																		type="text"
 																		class="product1 fontx textx"
@@ -1339,6 +1339,8 @@
 																	/>
 																</div>
 																<div class="menu_item_input_container">
+
+																	<img class="chilli-1" src="./img/CHILLI.png" alt="">
 
 																	<input
 																		type="text"
